WIP. adding contrast check for colors. Fix UX for color choosing. Add method to choose color from prop in color-picker.

--- a/components/color-picker/color-picker.scss
+++ b/components/color-picker/color-picker.scss
@@ -1,4 +1,5 @@
 @import "../../styles/vars.scss";
+@import "../../styles/root.scss";
 
 .color-picker {
   height: calc(100%);
@@ -91,15 +92,8 @@
 
   .color-hex-editor {
     .hex-input {
-      border: none;
-      background: rgba(0,0,0,.5);
-      border-radius: 5px;
-      outline: none;
-      font-family: inherit;
-      font-size: 14px;
-      color: rgba(255,255,255,0.6);
-      padding: 8px;
-      width: 120px;
+      @extend .text-field;
+      max-width: 120px;
       text-align: center;
     }
   }
