--- a/styles/root.scss
+++ b/styles/root.scss
@@ -13,10 +13,20 @@ body {
   color: $primary-color;
   font-weight: 500;
   line-height: 1;
-  padding: 12px;
   border-radius: 5px;
   background: transparent;
   border: none;
   outline: none;
   cursor: pointer;
+}
+.text-field {
+  border: none;
+  background: rgba(0,0,0,.5);
+  border-radius: 5px;
+  outline: none;
+  font-family: inherit;
+  font-size: 14px;
+  color: rgba(255,255,255,0.6);
+  padding: 8px;
+  min-width: 120px;
 }
