--- a/styles/vars.scss
+++ b/styles/vars.scss
@@ -4,3 +4,4 @@ $color-green: #00FF38;
 $color-purple: #C557F9;
 $primary-color: #57D2F9;
 $main-color-gradient: linear-gradient(90deg,#f00,#ff0,#0f0,#0ff,#00f,#f0f,#f00);
+$discord-color: #36393F;
